--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,13 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
